--- a/waxom.css
+++ b/waxom.css
@@ -445,6 +445,30 @@
   box-shadow: 0 0 0 128px rgba(0, 0, 0, 0.6) inset;
 }
 
+.projects__catalog_phone:hover .projects__catalog_phone-photo {
+  background: url("hover.png") no-repeat 50% 50%, url("phote.png") no-repeat;
+}
+
+.projects__catalog_mount:hover .projects__catalog_mount-photo {
+  background: url("hover.png") no-repeat 50% 50%, url("mount.png") no-repeat;
+}
+
+.projects__catalog_book:hover .projects__catalog_book-photo {
+  background: url("hover.png") no-repeat 50% 50%, url("book.png") no-repeat;
+}
+
+.projects__catalog_birds:hover .projects__catalog_birds-photo {
+  background: url("hover.png") no-repeat 50% 50%, url("birds.png") no-repeat;
+}
+
+.projects__catalog_journal:hover .projects__catalog_journal-photo {
+  background: url("hover.png") no-repeat 50% 50%, url("journal.png") no-repeat;
+}
+
+.projects__catalog_see:hover .projects__catalog_see-photo {
+  background: url("hover.png") no-repeat 50% 50%, url("see.png") no-repeat;
+}
+
 .projects__catalog_phone:hover .projects__catalog_phone-text,
 .projects__catalog_mount:hover .projects__catalog_mount-text,
 .projects__catalog_book:hover .projects__catalog_book-text,
@@ -487,4 +511,227 @@
   border-radius: 4px;
   color: white;
   box-shadow: 0 3px 0 #695c53;
+}
+
+.video {
+  height: 704px;
+  width: 1234px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.video__wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  background: url("video.png") no-repeat;
+  height: 704px;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.video__play {
+  background: url("videoicon.png") no-repeat;
+  width: 100px;
+  height: 100px;
+}
+
+.video__caption {
+  margin: 30px 0;
+  font-size: 30px;
+  font-family: "Raleway";
+  color: white;
+}
+
+.video__text {
+  line-height: 1.7;
+  text-align: center;
+  font-size: 16px;
+  font-family: "Montserrat";
+  color: white;
+  width: 580px;
+}
+
+.video__time {
+  margin-top: 40px;
+  font-weight: bold;
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: #c7b299;
+}
+
+.mobileDevices {
+  height: 695px;
+  width: 1234px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.mobileDevices__wrapper {
+  background: #fbfaf8;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  height: 695px;
+  width: 100%;
+}
+
+.mobileDevices__imagePhone {
+  background: url("BigPhone.png") no-repeat;
+  height: 695px;
+  width: 534px;
+}
+
+.mobileDevices__aboutPhone {
+  width: 700px;
+}
+
+.mobileDevices__aboutPhone_caption {
+  margin: 40px 0;
+  font-size: 30px;
+  font-family: "Raleway";
+  color: #555555;
+  font-weight: bold;
+}
+
+.mobileDevices__aboutPhone_text {
+  font-size: 16px;
+  font-family: "Montserrat";
+  color: #8c8c8c;
+  line-height: 1.5;
+}
+
+.mobileDevices__aboutPhone_list {
+  height: 220px;
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.mobileDevices__aboutPhone_list-item {
+  width: 600px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: center;
+  align-items: center;
+}
+
+.mobileDevices__aboutPhone_list-item-symbol {
+  background: url("arrows.png") no-repeat;
+  height: 21px;
+  width: 22px;
+}
+
+.mobileDevices__aboutPhone_list-item-par {
+  line-height: 2;
+  margin-left: 25px;
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: #8c8c8c;
+}
+
+.statics {
+  margin: 0 150px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  height: 302px;
+  width: 1234px;
+}
+
+.statics__wrapper {
+  width: 100%;
+  height: 302px;
+  background: #271e1b;
+  background: -webkit-linear-gradient(left, #271e1b 0%, #473025 100%);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+.statics__clients_icon {
+  background: url("clients.png") no-repeat;
+  height: 44px;
+  width: 44px;
+}
+
+.statics__coffe_icon {
+  background: url("cups.png") no-repeat;
+  height: 44px;
+  width: 48px;
+}
+
+.statics__blogPosts_icon {
+  background: url("posts.png") no-repeat;
+  height: 44px;
+  width: 44px;
+}
+
+.statics__likes_icon {
+  background: url("likes.png") no-repeat;
+  height: 44px;
+  width: 44px;
+}
+
+.statics__launch_icon {
+  background: url("launch.png") no-repeat;
+  height: 44px;
+  width: 54px;
+}
+
+.statics__clients, .statics__coffe, .statics__blogPosts, .statics__likes, .statics__launch {
+  height: 170px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+}
+
+.statics__clients_quantity, .statics__coffe_quantity, .statics__blogPosts_quantity, .statics__likes_quantity, .statics__launch_quantity {
+  font-size: 48px;
+  font-family: "Montserrat";
+  color: white;
+  line-height: 0.75;
+}
+
+.statics__clients_name, .statics__coffe_name, .statics__blogPosts_name, .statics__likes_name, .statics__launch_name {
+  font-size: 14px;
+  font-family: "Montserrat";
+  color: #c7b299;
+  text-transform: uppercase;
+  line-height: 1.429;
+}
+
+.statics__clients_line, .statics__coffe_line, .statics__blogPosts_line, .statics__likes_line, .statics__launch_line {
+  width: 30px;
+  border-bottom: 2px solid white;
 }
